fix: hide tour button on mobile devices
Add media query to hide tour button on screens smaller than 768px and fix button icon spacing

--- a/vistas/css/plantilla.css
+++ b/vistas/css/plantilla.css
@@ -205,4 +205,10 @@ input[type="checkbox"].custom-disabled:checked::after {
     border-bottom-color: #9b9b9b;
 }
 
+@media screen and (max-width: 768px) {
+    .tourButton {
+        display: none;
+    }
+}
+
 
